<resources>
    <string name="app_name">LoginDraft2</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="number">Phone Number</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login_now">Login Now</string>
    <string name="sign_up_now">Sign-up Now</string>
    <string name="todo">TODO</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign-In</string>
    <string name="otp_details">Please enter a One-Time Password(OTP) we sent to</string>
    <string name="phone">number</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend Code</string>
</resources>
