<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="112dp"
        android:layout_height="40dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="63dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/username"
        android:textAllCaps="true"
        android:textColor="@color/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/txtPhone"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="62dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="109dp"
        android:background="@color/color"
        android:fontFamily="sans-serif-light"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="275dp"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/color"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPhone" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:background="@color/transparent"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@color/color"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintStart_toStartOf="@+id/btnSignup"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:background="@color/transparent"
        android:text="@string/sign_up_now"
        android:textColor="@color/color"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="28dp"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="159dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="@string/forgot_password"
            android:textColor="@color/color" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>