<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Registration"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textColor="@color/color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="168dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/phone_number"
        android:textAllCaps="true"
        android:textColor="@color/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etPhoneNum"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/etPhoneNum"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="33dp"
        android:background="@color/color"
        android:inputType="phone"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="1dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etPass1"
        app:layout_constraintStart_toStartOf="@+id/etPhoneNum"
        app:layout_constraintTop_toBottomOf="@+id/etPhoneNum" />


    <EditText
        android:id="@+id/etPass1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:background="@color/color"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginStart="1dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/confirm_password"
        android:textAllCaps="true"
        android:textColor="@color/color"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etPass2"
        app:layout_constraintStart_toStartOf="@+id/etPass2"
        app:layout_constraintTop_toBottomOf="@+id/etPass1" />

    <EditText
        android:id="@+id/etPass2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="33dp"
        android:background="@color/color"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnreg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnsignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="115dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/transparent"
        android:onClick="displayToast"
        android:text="@string/sign_up"
        android:textColor="@color/color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnreg" />

    <Button
        android:id="@+id/btnreg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:background="@color/transparent"
        android:text="Register"
        android:textColor="@color/color"
        app:layout_constraintBottom_toTopOf="@+id/btnsignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass2" />


</android.support.constraint.ConstraintLayout>